--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -13,7 +13,11 @@
 
 </head>
 
+<html>
+
+
 <body>
+
 
     <!-- As a heading -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -23,6 +27,12 @@
             </div>
         </div>
     </nav>
+
+    <head>
+        <title>Sentiment Analysis</title>
+    </head>
+
+
 
     <br><br><br>
     <div class="container">
