--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -23,22 +23,24 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">FLIGHT PRICE</a>
+                <a class="navbar-brand" href="/">Flight Price Prediction</a>
+                <title>Flight Price Prediction</title>
+
             </div>
         </div>
     </nav>
 
-    <head>
-        <title>Sentiment Analysis</title>
-    </head>
 
 
 
     <br><br><br>
     <div class="container">
 
+    
+
 
         <form action="\predict" method="post">
+
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card">
